2011-08-30  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:	Added a 'valgrind-sqlite' rule to allow for
			leak testing on Unix.
	* generic/odbcStubInit.c:
	* generic/tdbcodbc.c:	A round of memory leak hunting.  In the test
				suite, 6 'definitely lost' blocks remain,
				all of which at this point appear to be
				leaks in dependent libraries. Thanks to
				Giorgios Petasis for reporting the presence
				of the leaks and diagnosing two of them.
	* library/tdbcodbc.tcl:	Corrected a typo in 'rename' statements that
				caused handles to leak (and potentially caused
				user commands to be deleted?)
	* tests/all.tcl:	Added [rename exit {}] for leak checking.
	* tests/tdbcodbc.test:	Removed a useless [catch] on a cleanup
				operation.

2011-07-19  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* Makefile.in:
	* README:	Advanced version number to 1.0b17.

	* configure: 	autoconf 2.59

2011-07-18  Don Porter  <dgp@users.sourceforge.net>

	* configure.in: Update to latest TEA 3.9 revisions.
	* Makefile.in:
	* tclconfig/*:

	* configure:    autoconf-2.59

2011-02-21  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcodbc.c (GetCell, HasBigintMethod, ResultSetConstructor):
		Fix a crash where an error is returned from SQLGetData.
	        Add a check for whether a connection supports 64-bit integers
		before trying to use them to replace NUMERIC or DECIMAL
		values. Add a method to determine 64-bit integer support.
		(Bug [8766b8dc40].)
	* library/tdbcodbc.tcl (tdbc::odbc::connection typemap):
		Add to initialization a check for 64-bit integer support
		so that the above change works. (Bug [8766b8dc40].)
	* tests/tdbcodbc.test:
		Code formatting changes to avoid long lines and spurious
		semicolons.

2011-02-20  Kevin B, Kenny  <kennykb@acm.org>

	* tests/tdbcodbc.test (tdbc::odbc-30.[45]):
			Added tests for [allrows] and [foreach] on multiple
			result sets.

	* generic/tdbcodbc.c (ResultSetNextresultsMethod):
	* tests/tdbcodbc.test (tdbc::odbc-{30.6,31.1}: